# pms

./: .gitignore  MANIFEST.in  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  vite.config.js
pms/: hooks.py
pms/www/: pms.html  pms.py
src/: App.css  App.jsx  config.js  index.css
src/components/: Booking.jsx  HRMS.jsx  Invoices.jsx  Listings.jsx  Maintenance.jsx  Mall3DView.jsx  Owners.jsx  Properties.jsx  Quotation.jsx  Reports.jsx  Support.jsx  Tenants.jsx
