[project]
name = "pms"
authors = [
    { name = "Administrator", email = "admin@example.com" }
]
description = "Property Management System"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "pms"
